[project]
name = "conduit"
version = "0.9.0"
description = "Bridges azure and grafana"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.12.3",
    "blinker==1.8.2",
    "bs4==0.0.2",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "flask==3.0.3",
    "idna==3.7",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "lxml==5.2.2",
    "markupsafe==2.1.5",
    "requests==2.32.3",
    "soupsieve==2.5",
    "urllib3==2.2.2",
    "werkzeug==3.0.3",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
